# tranql

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_Old  Jenkinsfile  MANIFEST.in  Makefile  QUICKSTART.md  README.md  Vulnerabilities_Doc.md  dev-schema.yaml  docker-compose.yml  package.json  requirements.txt  setup.cfg
.github/workflows/: build-push-dev-image.yml  build-push-release.yml  code-checks.yml  trivy-pr-scan.yml
.old_cicd/: Jenkinsfile
redis_data/: dump.rdb
src/tranql/: __init__.py  _version.py  api.py  concept.py  conf.test  dev-conf.yml  grammar.py  main.py  request_util.py  tranql_ast.py  tranql_schema.py  util.py
src/tranql/backplane/: server.py
src/tranql/backplane/api/: GNBR_api.py  NDEX_api.py  automat_api.py  biolink_walker_api.py  gamma_api.py  icees_api.py  indigo_api.py  roger_api.py  rtx_query.py  (+1 more)
src/tranql/conf/: dev-schema.yml  redis-schema.yml  schema.yaml
src/tranql/queries/: cop.tranql  drug-targets-gene.tranql  gamma-rtx-query.tranql  predicates.tranql  workflow-4.tranql  workflow-5.tranql  workflow-5_v3.tranql
src/tranql/utils/: merge_utils.py
src/tranql/web/: package-lock.json  package.json  setupEnv.js
tests/: test_api.py  test_backplane.py  test_tranql.py  util.py
tests/mock/: bidirectional_question.json  disease_to_chemical_exposure-trapi-1.0.json  gamma_quick-1.0.json  icees_predicates-1.0.json  predicates-1.0.json  rtx_predicates-1.0.json
tranql/: api.py  main.py  requirements.txt  tranql_ast.py  tranql_schema.py
tranql/tests/: test_tranql.py
tranql/utils/: merge_utils.py
web/: package.json
(+18 files in other folders)
