[metadata]
name = tranql
version = attr: tranql._version.__version__
author = Renaissance Computing Institute
author_email = scox@renci.org
description = TranQL Knowledge Network Query Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helxplatform/tranql
project_urls =
    Bug Tracker = https://github.com/helxplatform/tranql/issues
keywords = knowledge network  graph biomedical
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = 3.10
include_package_data = true
install_requires =
    Flask

[options.packages.find]
where = src